--- a/main.scss
+++ b/main.scss
@@ -56,7 +56,7 @@ body {
     }
     .rightSide {
       .img {
-        background: url("/images/image-header-desktop.jpg"), no-repeat;
+        background: url("https://github.com/unreal0901/Challenge-1/blob/main/images/image-header-desktop.jpg"), no-repeat;
         background-color: $soft-violet;
         background-blend-mode: multiply;
         width: 100%;
@@ -83,7 +83,7 @@ body {
     width: auto;
 
     .img {
-      background: url("/images/image-header-mobile.jpg");
+      background: url("https://github.com/unreal0901/Challenge-1/blob/main/images/image-header-mobile.jpg");
       background-color: $soft-violet;
       background-blend-mode: multiply;
       width: 100%;
